Package: QDNAseq
----------------

Version: 1.29.2-9000 [2021-10-03]

NEW FEATURES:

 * Now exportBins() returns the pathname to the files written.

KNOWN ISSUES:

 * callBins() produces warnings on "Recycling array of length 1 in vector-
   array arithmetic is deprecated. Use c() or as.vector() instead."  This is
   a problem in the package 'CGHcall' dependency and is something that needs
   to be fixed there.  For further details, please see
   https://github.com/tgac-vumc/CGHcall/issues/2.

SOFTWARE QUALITY:

 * Add package test for exportBins().

BUG FIXES:

 * exportBins(fit, format = "seg", file = ...) and format = "vcf" did not
   respect argument 'file' but instead wrote files of its own names to the
   current working directory.
   
 * exportBins() would corrupt option 'scipen'.  Now it is left unchanged.
   

Version: 1.29.2 [2021-09-22]

BUG FIXES:

 * binReadCounts() would fail when specifying argument 'chunkSize'.  The fix
   was to require 'future' package version 1.22.1 or newer.
 

Version: 1.29.1 [2021-08-26]

SOFTWARE QUALITY:

 * Add package test for binReadCounts().


Version: 1.28.0 [2021-05-19]

RELEASE:

 * The version number was bumped for the Bioconductor release version, which is
   now BioC 3.13 for R (>= 4.0.3).


Version: 1.26.0 [2020-10-28]

RELEASE:

 * The version number was bumped for the Bioconductor release version, which is
   now BioC 3.12 for R (>= 4.0.0).


Version: 1.24.0 [2019-10-30]

RELEASE:

 * The version number was bumped for the Bioconductor release version, which is
   now BioC 3.11 for R (>= 3.6.1).


Version: 1.22.0 [2018-10-30]

RELEASE:

 * Bioconductor 3.10


Version: 1.21.6 [2019-09-25]

BUG FIXES:

 * Link to the 'GEM library' tool was broken.
 

Version: 1.21.5 [2019-09-09]

BUG FIXES:

 * plot(..., logTransform=TRUE, doSegments=TRUE) on QDNAseqSignals would
   position segments that were out of range incorrectly, because it forgot
   to take the log transform on those outliers.
 

Version: 1.21.4 [2019-09-06]